--- a/app/src/main/res/layout/fragment_write_list.xml
+++ b/app/src/main/res/layout/fragment_write_list.xml
@@ -21,6 +21,7 @@
             android:background="#faf7f4"
             android:gravity="center_horizontal|center_vertical"
             android:text="내가 쓴 맡김글"
+            android:fontFamily="@font/rokaf_bold_medium"
             android:textSize="16sp"
             android:textStyle="normal" />
 
