--- a/app/src/main/res/layout/fragment_care_todolist.xml
+++ b/app/src/main/res/layout/fragment_care_todolist.xml
@@ -30,158 +30,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" />
+            android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="370dp"
-            android:layout_height="400dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp">
-
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="20dp"
-                    android:background="#FFFFFF"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView1"
-                        android:layout_width="46dp"
-                        android:layout_height="48dp"
-                        android:layout_marginLeft="10dp"
-                        android:background="@drawable/bold2"
-                        android:src="@drawable/food" />
-
-                    <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="20dp"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:text="밥주기    "
-                        android:textSize="15sp" />
-
-                    <Button
-                        android:id="@+id/button12"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_marginLeft="120dp"
-                        android:background="@drawable/pinkbutton"
-                        android:text="확인하기" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="30dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="46dp"
-                        android:layout_height="48dp"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/play" />
-
-                    <TextView
-                        android:id="@+id/register"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="20dp"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:text="놀아주기"
-                        android:textSize="15sp" />
-
-                    <Button
-                        android:id="@+id/button13"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_marginLeft="120dp"
-                        android:background="@drawable/pinkbutton"
-                        android:text="완료" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="30dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView7"
-                        android:layout_width="46dp"
-                        android:layout_height="48dp"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/run" />
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="20dp"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:text="산책하기"
-                        android:textSize="15sp" />
-
-                    <Button
-                        android:id="@+id/button14"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_marginLeft="120dp"
-                        android:background="@drawable/pinkbutton"
-                        android:text="미완료"
-                        android:textColor="#606060" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="30dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView6"
-                        android:layout_width="46dp"
-                        android:layout_height="48dp"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/hair" />
-
-                    <TextView
-                        android:id="@+id/textView9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="20dp"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:text="미용하기"
-                        android:textSize="15sp" />
-
-                    <Button
-                        android:id="@+id/button15"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_marginLeft="120dp"
-                        android:background="@drawable/pinkbutton"
-                        android:text="미완료"
-                        android:textColor="#6A6A6A" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -218,7 +72,7 @@
     </LinearLayout>
 
     <ImageButton
-        android:id="@+id/backButton11"
+        android:id="@+id/imageButton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#faf7f4"
