--- a/app/src/main/res/layout/fragment_complete_sue.xml
+++ b/app/src/main/res/layout/fragment_complete_sue.xml
@@ -9,18 +9,12 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="211dp"
-        android:background="#C0D3B2">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#FFFFFF"
             android:orientation="vertical">
 
             <LinearLayout
@@ -74,7 +68,7 @@
                     android:layout_height="1dp"
                     android:layout_below="@+id/name_text"
                     android:layout_marginTop="10dp"
-                    android:background="#9A9A9A" />
+                    android:background="#CFCECE" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -106,7 +100,7 @@
                     android:layout_height="1dp"
                     android:layout_below="@+id/name_text"
                     android:layout_marginTop="15dp"
-                    android:background="#9A9A9A" />
+                    android:background="#CFCECE" />
 
 
                 <LinearLayout
@@ -172,8 +166,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
                         android:layout_weight="1"
-                        android:background="@drawable/bold4"
-                        android:backgroundTint="#FF4A7C27"
+                        android:background="@drawable/pinkbutton"
                         android:text="홈으로 돌아가기"
                         android:textColor="#FFFFFF" />
                 </LinearLayout>
