--- a/app/src/main/res/layout/fragment_end.xml
+++ b/app/src/main/res/layout/fragment_end.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFC5EE"
+    android:background="#B6CF9B"
     tools:context=".Join1Fragment">
 
     <LinearLayout
@@ -15,50 +15,41 @@
         android:layout_marginEnd="20dp"
         android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/endInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="당신의 안전한 동행에"
+            android:textColor="#000000"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/endInput2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="감사합니다"
+            android:textColor="#000000"
+            android:textSize="30sp" />
+
+        <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
-            android:orientation="vertical">
+            android:layout_height="210dp"
+            android:src="@drawable/gompang" />
 
-            <TextView
-                android:id="@+id/endInput"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="당신의 안전한 동행에"
-                android:textColor="#000000"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/endInput2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="감사합니다"
-                android:textColor="#000000"
-                android:textSize="30sp" />
-
-            <ImageView
-                android:id="@+id/imageView10"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:src="@drawable/logo" />
-
-            <Button
-                android:id="@+id/endButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="160dp"
-                android:layout_marginEnd="10dp"
-                android:background="#573E8B28"
-                android:backgroundTint="#573E8B28"
-                android:text="홈으로 돌아가기"
-                android:textColor="#FFFFFF" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/endButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="10dp"
+            android:background="#573E8B28"
+            android:backgroundTint="#573E8B28"
+            android:text="홈으로 돌아가기"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
