--- a/app/src/main/res/layout/fragment_join1.xml
+++ b/app/src/main/res/layout/fragment_join1.xml
@@ -12,35 +12,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/button12"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:background="#faf7f4"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="회원가입(1/2)"
+            android:textSize="16sp"
+            android:textStyle="normal" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/imageButton4"
-                android:layout_width="40dp"
-                android:layout_height="35dp"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="5dp"
-                android:backgroundTint="#FFFFFF"
-                android:scaleType="centerCrop"
-                android:src="@drawable/arrow"
-                android:stateListAnimator="@null"
-                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="40dp"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="회원가입(1/2)"
-                android:textSize="20sp"
-                android:textStyle="normal" />
-        </LinearLayout>
+            android:orientation="horizontal"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,23 +96,32 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/nextButton1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:background="#573E8B28"
-                    android:backgroundTint="#573E8B28"
-                    android:text="다음"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    tools:ignore="TextContrastCheck,TextContrastCheck" />
-            </LinearLayout>
+                android:orientation="vertical"/>
 
         </LinearLayout>
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/backButton13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#faf7f4"
+        android:src="@drawable/arrow" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:padding="10dp">
+
+        <Button
+            android:id="@+id/nextButton1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/pinkbutton"
+            android:text="회원가입" />
 
     </LinearLayout>
 </FrameLayout>
