--- a/app/src/main/res/layout/fragment_member_info.xml
+++ b/app/src/main/res/layout/fragment_member_info.xml
@@ -24,21 +24,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/textView20"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_marginTop="20dp"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="맡기미 정보"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:textStyle="normal" />
-
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 
     <FrameLayout
         android:layout_width="match_parent"
