--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -12,169 +12,152 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:background="#faf7f4"
+            android:fontFamily="@font/rokaf_bold_medium"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="마이페이지"
+            android:textSize="16sp"
+            android:textStyle="normal" />
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/imageButton4"
-                android:layout_width="40dp"
-                android:layout_height="35dp"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="5dp"
-                android:backgroundTint="#FFFFFF"
-                android:scaleType="centerCrop"
-                android:src="@drawable/arrow"
-                android:stateListAnimator="@null"
-                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="40dp"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="마이페이지"
-                android:textSize="20sp"
-                android:textStyle="normal" />
-        </LinearLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            app:cardBackgroundColor="#FAFAFA"
-            app:cardCornerRadius="8dp"
-            app:contentPadding="10dp">
+            android:layout_width="380dp"
+            android:layout_height="622dp"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="380dp"
-                android:layout_height="622dp"
-                android:layout_gravity="center_horizontal"
-                android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView12"
-                        android:layout_width="105dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/person1" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="20dp"
-                        android:orientation="vertical"
-                        android:padding="10dp">
-
-                        <TextView
-                            android:id="@+id/textView7"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="18dp"
-                            android:text="김용현"
-                            android:textSize="20sp" />
-
-                        <TextView
-                            android:id="@+id/textView8"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:text="yyyhhhmmm"
-                            android:textColor="#C18686"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/textView9"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:text="010-1111-1111"
-                            android:textSize="20sp" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                <ImageView
+                    android:id="@+id/imageView12"
+                    android:layout_width="105dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
-
-                    <Button
-                        android:id="@+id/button2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="5dp"
-
-                        android:layout_weight="1"
-                        android:background="@drawable/bold1"
-                        android:gravity="center"
-                        android:text="회원정보수정"
-                        tools:ignore="TouchTargetSizeCheck" />
-
-                    <Button
-                        android:id="@+id/choiceRequestButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="나에게 온 신청" />
-
-                    <Button
-                        android:id="@+id/button3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-
-                        android:layout_weight="1"
-                        android:background="@drawable/bold1"
-                        android:gravity="center"
-                        android:text="교육영상 시청"
-                        tools:ignore="TouchTargetSizeCheck" />
-
-                </LinearLayout>
+                    android:src="@drawable/person1" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical"
+                    android:padding="10dp">
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/textView7"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="bottom"
-                        android:paddingStart="20dp"
-                        android:paddingTop="20dp"
-                        android:text="최근 이용 내역" />
+                        android:layout_gravity="center"
+                        android:layout_marginTop="18dp"
+                        android:text="김용현"
+                        android:textSize="20sp" />
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="357dp"
-                        android:layout_height="314dp"
-                        android:layout_margin="10dp"
-                        android:background="#EAE9E9"
-                        android:backgroundTint="#EAE9E9"
-                        app:cardBackgroundColor="#FAFAFA"
-                        app:cardCornerRadius="8dp"
-                        app:contentPadding="10dp" />
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="yyyhhhmmm"
+                        android:textColor="#C18686"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="010-1111-1111"
+                        android:textSize="20sp" />
                 </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+
+                    android:layout_weight="1"
+                    android:background="@drawable/bold1"
+                    android:backgroundTint="#ECEBEB"
+                    android:gravity="center"
+                    android:text="회원정보수정"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+                <Button
+                    android:id="@+id/choiceRequestButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bold1"
+                    android:backgroundTint="#ECEBEB"
+                    android:text="나에게 온 신청" />
+
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+
+                    android:layout_weight="1"
+                    android:background="@drawable/bold1"
+                    android:backgroundTint="#ECEBEB"
+                    android:gravity="center"
+                    android:text="교육영상 시청"
+                    tools:ignore="TouchTargetSizeCheck" />
 
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="bottom"
+                    android:paddingStart="20dp"
+                    android:paddingTop="20dp"
+                    android:text="최근 이용 내역" />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="357dp"
+                    android:layout_height="314dp"
+                    android:layout_margin="10dp"
+                    android:background="#EAE9E9"
+                    android:backgroundTint="#EAE9E9"
+                    app:cardBackgroundColor="#FAFAFA"
+                    app:cardCornerRadius="8dp"
+                    app:contentPadding="10dp" />
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/backButton16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#faf7f4"
+        android:src="@drawable/arrow" />
 
 </FrameLayout>
