--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -27,6 +27,7 @@
                 android:background="#faf7f4"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="할 일"
+                android:fontFamily="@font/rokaf_bold_medium"
                 android:textSize="16sp"
                 android:textStyle="normal" />
         </LinearLayout>
