--- a/app/src/main/res/layout/fragment_care_info.xml
+++ b/app/src/main/res/layout/fragment_care_info.xml
@@ -18,7 +18,7 @@
             android:layout_height="46dp"
             android:background="#faf7f4"
             android:gravity="center"
-            android:text="회원정보수정"
+            android:text="돌봄신정정보"
             android:fontFamily="@font/rokaf_bold_medium"
             android:textAlignment="center"
             android:textSize="16sp"
